--- a/public/assets/room.css
+++ b/public/assets/room.css
@@ -1,10 +1,4 @@
-html, body, #main-container, #main, .room{
-	height: 100%;
-	overflow: hidden;
-}
-
 .messages{
-	height: 80%;
+	height: 600px;
 	overflow: auto;
 }
-
