--- a/public/assets/room.css
+++ b/public/assets/room.css
@@ -21,7 +21,12 @@ html, body{
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 }
-
+.bubble-left{
+	margin-right:50px;
+}
+.bubble-right{
+	margin-left:50px;
+}
 
 .bubble:before{
 	content:'';
