--- a/public/app/room.css
+++ b/public/app/room.css
@@ -8,8 +8,8 @@ html, body{
 }
 
 .bubble{
+  background: #eeeeee;
 	position:relative;
-	background-color:#eee;
 	margin-bottom: 10px;
 	margin-left: 20px;
 	margin-right: 20px;
@@ -36,7 +36,15 @@ html, body{
 	top:10%;
 	right:100%;
 	border-bottom:10px solid transparent;
-	border-right: 20px solid #eee;
+	border-right: 20px solid #eeeeee;
+	border-top:10px solid transparent;
+}
+
+.bubble.bubble-system:before{
+	top:10%;
+	right:100%;
+	border-bottom:10px solid transparent;
+	border-right: 20px solid #eeeeee;
 	border-top:10px solid transparent;
 }
 
@@ -44,7 +52,7 @@ html, body{
 	top:10%;
 	left:100%;
 	border-bottom:10px solid transparent;
-	border-left: 20px solid #eee;
+	border-left: 20px solid #eeeeee;
 	border-top:10px solid transparent;
 }
 
@@ -58,6 +66,75 @@ html, body{
 
 .private.bubble.bubble-right:before{
 	border-left: 20px solid #d9edf7;
+}
+
+.minimalism.bubble{
+  padding: 0;
+  border: none;
+}
+.minimalism.bubble>pre{
+  border: none;
+  margin: 0;
+  background: transparent;
+	border-radius: 6px;
+}
+.bubble-system.minimalism>pre{
+  background: #00CC66;
+  color: #222;
+}
+.bubble-left.minimalism>pre{
+  background: #fff;
+  color: #111;
+}
+.bubble-right.minimalism>pre{
+  background: #0099FF;
+  color: #fff;
+}
+.bubble.bubble-system.minimalism:before{
+	border-bottom:5px solid transparent;
+	border-right: 10px solid #00CC66;
+	border-top:5px solid transparent;
+}
+.bubble.bubble-left.minimalism:before{
+	border-bottom:5px solid transparent;
+	border-right: 10px solid #fff;
+	border-top:5px solid transparent;
+}
+.bubble.bubble-right.minimalism:before{
+	border-bottom:5px solid transparent;
+	border-left: 10px solid #0099FF;
+	border-top:5px solid transparent;
+}
+
+.text-rect{
+  border: none;
+  padding: 0;
+}
+.text-rect>pre{
+  background: transparent;
+  border: none;
+  padding: 0;
+  padding-left: 20px;
+  margin-bottom: 15px;
+}
+.text-rect>pre:before{
+  content: '·';
+  position: absolute;
+  margin-left: -20px;
+  font-weight: 900;
+}
+.text-rect>p{
+  padding: 0;
+  margin-bottom: 5px;
+}
+.text-rect.text-me>p{
+  color: #009966;
+}
+.text-rect.text-system>p{
+  color: #0099FF;
+}
+.bold{
+  font-weight: 900;
 }
 
 .blink-cursor.enabled:after {
@@ -84,6 +161,7 @@ html, body{
 
 pre{
   margin: 0;
+  font-size: 16px;
 }
 
 @-moz-keyframes cursor-blink {
